--- a/app/src/main/res/layout/activity_q21_to_q30.xml
+++ b/app/src/main/res/layout/activity_q21_to_q30.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="uk.ucl.group21.currentviewapp.Q1ToQ10">
+    tools:context="uk.ucl.group21.currentviewapp.Q21ToQ30">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -117,7 +117,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="1"
+                    android:text="21"
                     android:id="@+id/textView1"
                     android:layout_column="1"
                     android:layout_weight="1"
@@ -126,7 +126,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="@string/q1"
+                    android:text="@string/q21"
                     android:id="@+id/textView2"
                     android:layout_column="2"
                     android:layout_weight="2"
@@ -135,14 +135,14 @@
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/radioButton1.1"
+                    android:id="@+id/radioButton21.1"
                     android:layout_column="3"
                     android:textAlignment="center"
                     android:layout_weight="1" android:layout_gravity="center_horizontal" android:width="10dp"/>
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/radioButton1.2"
+                    android:id="@+id/radioButton21.2"
                     android:layout_column="4"
                     android:layout_weight="1"
                     android:textAlignment="center"
@@ -150,7 +150,7 @@
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/radioButton1.3"
+                    android:id="@+id/radioButton21.3"
                     android:layout_column="5"
                     android:layout_weight="1"
                     android:textAlignment="center"
@@ -158,7 +158,7 @@
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/radioButton1.4"
+                    android:id="@+id/radioButton21.4"
                     android:layout_column="6"
                     android:layout_weight="1"
                     android:textAlignment="center"
@@ -166,10 +166,11 @@
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/radioButton1.5"
+                    android:id="@+id/radioButton21.5"
                     android:layout_column="7"
                     android:layout_weight="1"
-                    android:layout_marginRight="5dp" android:layout_gravity="center_horizontal"
+                    android:layout_marginEnd="5dp"
+                    android:layout_gravity="center_horizontal"
                     android:width="10dp"/>
 
             </TableRow>
@@ -181,7 +182,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="2"
+                    android:text="22"
                     android:layout_column="1"
                     android:layout_weight="1"
                     android:textAlignment="center" android:textSize="18sp"/>
@@ -189,7 +190,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="@string/q2"
+                    android:text="@string/q22"
                     android:layout_column="2"
                     android:textSize="18sp"
                     android:layout_weight="2"/>
@@ -197,35 +198,35 @@
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/radioButton2.1"
+                    android:id="@+id/radioButton22.1"
                     android:layout_column="3"
                     android:layout_weight="1"
                     android:layout_gravity="center_horizontal" android:width="10dp"/>
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/radioButton2.2"
+                    android:id="@+id/radioButton22.2"
                     android:layout_column="4"
                     android:layout_weight="1"
                     android:layout_gravity="center_horizontal" android:width="10dp"/>
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/radioButton2.3"
+                    android:id="@+id/radioButton22.3"
                     android:layout_column="5"
                     android:layout_weight="1"
                     android:layout_gravity="center_horizontal" android:width="10dp"/>
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/radioButton2.4"
+                    android:id="@+id/radioButton22.4"
                     android:layout_column="6"
                     android:layout_weight="1"
                     android:layout_gravity="center_horizontal" android:width="10dp"/>
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/radioButton2.5"
+                    android:id="@+id/radioButton22.5"
                     android:layout_column="7"
                     android:layout_weight="1"
                     android:layout_marginEnd="5dp" android:layout_gravity="center_horizontal"
@@ -240,7 +241,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="3"
+                    android:text="23"
                     android:layout_column="1"
                     android:layout_weight="1"
                     android:textAlignment="center" android:textSize="18sp"/>
@@ -248,7 +249,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="@string/q3"
+                    android:text="@string/q23"
                     android:layout_column="2"
                     android:textSize="18sp"
                     android:layout_weight="2"/>
@@ -256,7 +257,7 @@
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/radioButton3.1"
+                    android:id="@+id/radioButton23.1"
                     android:layout_column="3"
                     android:layout_weight="1"
                     android:layout_gravity="center_horizontal" android:width="10dp"/>
@@ -264,7 +265,7 @@
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/radioButton3.2"
+                    android:id="@+id/radioButton23.2"
                     android:layout_column="4"
                     android:layout_weight="1"
                     android:layout_gravity="center_horizontal" android:width="10dp"/>
@@ -272,7 +273,7 @@
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/radioButton3.3"
+                    android:id="@+id/radioButton23.3"
                     android:layout_column="5"
                     android:layout_weight="1"
                     android:layout_gravity="center_horizontal" android:width="10dp"/>
@@ -280,7 +281,7 @@
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/radioButton3.4"
+                    android:id="@+id/radioButton23.4"
                     android:layout_column="6"
                     android:layout_weight="1"
                     android:layout_gravity="center_horizontal" android:width="10dp"/>
@@ -288,7 +289,7 @@
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/radioButton3.5"
+                    android:id="@+id/radioButton23.5"
                     android:layout_column="7"
                     android:layout_weight="1"
                     android:layout_marginEnd="5dp" android:layout_gravity="center_horizontal"
@@ -305,7 +306,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="4"
+                    android:text="24"
                     android:layout_column="1"
                     android:layout_weight="1"
                     android:textAlignment="center" android:textSize="18sp"/>
@@ -313,7 +314,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="@string/q4"
+                    android:text="@string/q24"
                     android:layout_column="2"
                     android:textSize="18sp"
                     android:layout_weight="2"/>
@@ -321,7 +322,7 @@
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/radioButton4.1"
+                    android:id="@+id/radioButton24.1"
                     android:layout_column="3"
                     android:layout_weight="1"
                     android:layout_gravity="center_horizontal" android:width="10dp"/>
@@ -329,7 +330,7 @@
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/radioButton4.2"
+                    android:id="@+id/radioButton24.2"
                     android:layout_column="4"
                     android:layout_weight="1"
                     android:layout_gravity="center_horizontal" android:width="10dp"/>
@@ -337,7 +338,7 @@
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/radioButton4.3"
+                    android:id="@+id/radioButton24.3"
                     android:layout_column="5"
                     android:layout_weight="1"
                     android:layout_gravity="center_horizontal" android:width="10dp"/>
@@ -345,7 +346,7 @@
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/radioButton4.4"
+                    android:id="@+id/radioButton24.4"
                     android:layout_column="6"
                     android:layout_weight="1"
                     android:layout_gravity="center_horizontal" android:width="10dp"/>
@@ -353,7 +354,7 @@
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/radioButton4.5"
+                    android:id="@+id/radioButton24.5"
                     android:layout_column="7"
                     android:layout_weight="1"
                     android:layout_marginEnd="5dp" android:layout_gravity="center_horizontal"
@@ -379,8 +380,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/NEXT"
-                    android:id="@+id/btnNextQ1to10"
-                    android:onClick="btnNextQ1to10"/>
+                    android:id="@+id/btnNextQ21to30"
+                    android:onClick="btnNextQ21to30"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -437,10 +438,5 @@
 
 
         </TableLayout>
-
     </ScrollView>
-
 </RelativeLayout>
-
-
-
